# py-series

./: .gitignore  README.md  Series.py  ap.py  gp.py  pyproject.toml
py_series/: Series.py  __main__.py  aps.py  fib.py  gps.py  hps.py  kthpow.py
